IE Menu Problem... Originally, I included CSS hacks for IE. However, my comments before the doctype was the reason IE was running in non-strict mode.  I did not know this. When Chris removed the comments, IE correctly went into strict mode and my IE hacks were no longer needed (the hacks were getting in the way now). solution: *) Make sure doctype is first on all files *) removed all IE hacks from menu.css (since the doctype issue fixes IE)
llvm-svn: 45025

--- a/clang/www/menu.css
+++ b/clang/www/menu.css
@@ -2,15 +2,6 @@
 /* page layout */
 /***************/
 
-/***IE***/
-#menu {
-	float:left;
-}
-#content {
-	float:left;
-	margin-left:1ex;
-}
-/***W3C***/
 [id=menu] {
 	position:fixed;
 }
@@ -35,6 +26,7 @@
 	background-color: rgb(192,192,192);
 }
 #menu a {
+	padding:0 .2em;
 	display:block;
 	text-align: center;
 	background-color: rgb(235,235,235);
